إعداد قاعدة الانتاج 2

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # .env
 
 DEBUG=True
-SECRET_KEY=django-insecure-k2czfp44glh9!(^^jy%no*&gagn#9movpim@(ov*p)&dipuku3
+SECRET_KEY=(django-insecure-jr3t7gx8t3mn2l0z9vws4z4pmyt6dvjgv4xv9qk6yl6pnmqg4f)
 ENV=dev
 
 # PostgreSQL Settings (used only in production)
