--- a/.env
+++ b/.env
@@ -1,17 +1,18 @@
-# .env
+# وضع التشغيل
+DEBUG=False
+ENV=prod
 
-DEBUG=True
-SECRET_KEY=(django-insecure-jr3t7gx8t3mn2l0z9vws4z4pmyt6dvjgv4xv9qk6yl6pnmqg4f)
-ENV=dev
+# مفتاح التشفير
+SECRET_KEY=django-insecure-jr3t7gx8t3mn2l0z9vws4z4pmyt6dvjgv4xv9qk6yl6pnmqg4f
 
-# PostgreSQL Settings (used only in production)
+# إعدادات قاعدة البيانات PostgreSQL (Render)
 DB_NAME=db_honey_store
 DB_USER=db_honey_store_user
 DB_PASSWORD=gwj4rs2VIB6lSZZ0wJltrK24VhXr9SWN
 DB_HOST=dpg-d214o4buibrs73e7besg-a
 DB_PORT=5432
 
-# Cloudinary Settings
+# إعدادات Cloudinary
 CLOUD_NAME=dq4ntpesw
 API_KEY=873815379615733
 API_SECRET=qk1vJ94gOOQ9pefYKM1CwKMDhbU
