--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # وضع التشغيل
-DEBUG=False
-ENV=prod
+DEBUG=true
+ENV=dev
 
 # مفتاح التشفير
 SECRET_KEY=django-insecure-jr3t7gx8t3mn2l0z9vws4z4pmyt6dvjgv4xv9qk6yl6pnmqg4f
